--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
+    "postcss-custom-media": "^10.0.0",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
     "prettier": "^3.0.3"
