--- a/src/content/projects/project-2.json
+++ b/src/content/projects/project-2.json
@@ -1,5 +1,6 @@
 {
   "title": "Project Two",
+  "link": "https://www.google.com/",
   "tags": ["R", "Notebook"],
   "image": "/project-images/test-image.jpg"
 }
