--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-custom-media": "^10.0.0",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
+    "postcss-sort-media-queries": "^5.2.0",
     "prettier": "^3.0.3"
   }
 }
