--- a/src/content/projects/project-2.json
+++ b/src/content/projects/project-2.json
@@ -2,7 +2,12 @@
   "title": "Project Two",
   "link": "https://www.google.com/",
   "tags": ["R", "Notebook"],
-  "image": "/project-images/test-image.jpg",
+  "image": {
+    "src": "/project-images/test-image.jpg",
+    "height": 400,
+    "width": 600,
+    "lazy": true
+  },
   "theme": {
     "backgroundColor": "#fac8c4"
   }
