Add alt text to images

--- a/src/content/projects/project-1.json
+++ b/src/content/projects/project-1.json
@@ -13,6 +13,7 @@
       "height": 800,
       "width": 1200
     },
+    "alt": "A dashboard with several bar charts depicting the average number of trips on London rental bikes.",
     "lazy": false
   },
   "theme": {
